@@ -1,8 +1,8 @@
 Package: rTANDEM
 Type: Package
 Title: Encapsulate X!Tandem in R.
-Version: 1.1.3
-Date: 2013-07-31
+Version: 1.1.4
+Date: 2013-09-23
 SystemRequirements: rTANDEM uses expat and pthread libraries. See the
         README file for details.
 Author@R: c(person("Frederic", "Fournier",
